# pupperv3-testing

./: .clang-format  .clang-tidy  .gitignore  README.md  can0_initialize.bash  can1_initialize.bash  can2_initialize.bash  discover_pi.py  mg_kinematics_jac.m  start_vcan_daemon.bash  tmux_run_robot.bash  usb2can_initialize.bash  vcan0_initialize.bash
rosbag2_2022_10_17-00_41_55/: metadata.yaml  rosbag2_2022_10_17-00_41_55_0.db3
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/lib/: motor_controller.cpp  motor_controller.hpp  motor_controller_generic.cpp  motor_controller_generic.hpp  motor_controller_generic_node.cpp  motor_controller_generic_node.hpp  motor_controller_node.cpp  motor_controller_node.hpp  motor_interface.cpp  motor_interface.hpp  motor_interface_generic.cpp  motor_interface_generic.hpp  prof_utils.hpp
src/cpp_pubsub/src/: a.out  actuator_test.py  can_latency_test.cpp  can_test.cpp  can_test.py  initialize_pihat_can.bash  interface_test.cpp  joint_state_publisher.cpp  latency_test.cpp  motor_controller_calibration_test.cpp  motor_controller_generic_calibration_sequence_test.cpp  motor_controller_generic_calibration_test.cpp  motor_controller_generic_node_test.cpp  motor_controller_generic_node_test_rig.cpp  motor_controller_node.cpp  motor_controller_node.hpp  motor_controller_node_test.cpp  motor_controller_test.cpp  motor_interface.cpp  motor_interface.hpp  pd_controller.hpp  pd_test.cpp  prof_utils.hpp  publisher_member_function.cpp  serial_test.cc  serial_test_syscall.cc  single_motor_test.py  talker.cpp  test.cpp
src/cpp_pubsub/test/: test_motor_controller_node.cpp
src/mock_controller/: CMakeLists.txt  package.xml
src/mock_controller/src/: mock_pub.cpp  zero_motors.cpp  zero_motors_6.cpp
src/pupper_interfaces/: CMakeLists.txt  package.xml
src/pupper_interfaces/msg/: JointCommand.msg
src/pupper_mujoco/: CMakeLists.txt  package.xml
src/pupper_mujoco/launch/: fixed_base_launch.py  floating_base_launch.py
src/pupper_mujoco/lib/: actuator_model.hpp  actuator_model_interface.hpp  basic_sim.cpp  basic_sim.hpp  basic_sim_node.cpp  basic_sim_node.hpp  constants.hpp  mujoco_base.hpp  mujoco_core.cpp  mujoco_core.hpp  mujoco_core_interactive.cpp  mujoco_core_interactive.hpp  mujoco_interactive_node.cpp  mujoco_interactive_node.hpp  mujoco_node.cpp  mujoco_node.hpp  robot_emulator.cpp  robot_emulator.hpp  simulator_interface.hpp  uitools.h  utils.hpp
src/pupper_mujoco/src/: basic.cc  basic_sim_node.cpp  basic_sim_node.hpp  basic_sim_node_test.cpp  basic_sim_test.cpp  mujoco_basic_sim.cpp  mujoco_basic_sim.hpp  mujoco_core_test.cpp  mujoco_interactive_test.cpp  mujoco_node_test.cpp  simulate.cc  uitools.c
src/pupper_mujoco/src/meshes/: ProtoAssembly-MGv25.001.stl  ProtoAssembly-MGv25.002.stl  ProtoAssembly-MGv25.006.stl  ProtoAssembly-MGv25.007.stl  ProtoAssembly-MGv25.010.stl  ProtoAssembly-MGv25.016.stl
src/pupper_mujoco/src/urdf/: geometry_utils.py  mujoco_joint.xml  pupper_v3.py  pupper_v3.urdf  pupper_v3.xml  pupper_v3_config.yaml  pupper_v3_et_gen.xml  pupper_v3_fixed_base.xml  pupper_v3_floating_base.xml
src/pupper_mujoco/test/: basic_test.cpp
src/pupper_mujoco/test/launch/: basic_test.test.py
src/pupper_rviz/: CMakeLists.txt  package.xml
src/pupper_rviz/launch/: pupper_rviz.launch.py
src/pupper_rviz/meshes/dae/: ProtoAssembly-MGv25.001.dae  ProtoAssembly-MGv25.003.dae  ProtoAssembly-MGv25.006.dae  ProtoAssembly-MGv25.014.dae
src/pupper_rviz/rviz/: rviz_basic_settings.rviz
src/pupper_rviz/urdf/: pupper_v3.urdf
src/pupper_v3/: CMakeLists.txt  package.xml
src/pupper_v3/launch/: pupper_v3.launch.py
src/pupper_v3/meshes/dae/: ProtoAssembly-MGv25.002.dae  ProtoAssembly-MGv25.005.dae  ProtoAssembly-MGv25.007.dae  ProtoAssembly-MGv25.010.dae  ProtoAssembly-MGv25.011.dae  ProtoAssembly-MGv25.012.dae  ProtoAssembly-MGv25.015.dae  ProtoAssembly-MGv25.016.dae
src/pupper_v3/urdf/: pupper_v3.urdf
src/py_mock_controller/: package.xml  setup.cfg  setup.py
src/py_mock_controller/py_mock_controller/: mock_controller.py
